[package]
name = "postoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
sha2 = "0.9.8"
rouille = "3.4.0"
serde = { version = "1.0.130", features = ["derive"] }
parking_lot = "0.11.2"